<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.home.HomeActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sort_24px"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        tools:ignore="MissingConstraints"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/im_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_user"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:fontFamily="@font/montserratbold"
        android:textSize="16sp"
        android:textColor="#FFF"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_user"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@drawable/bg_menu"
        android:orientation="vertical"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:id="@+id/course_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/bg_menu_item">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_event_note_24"
                        android:contentDescription="TODO" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/course_schedule"
                    android:fontFamily="@font/montserratmedium"
                    android:textColor="#404040"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:id="@+id/academic"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/bg_menu_item">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_assignment_24" />

                </LinearLayout>

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/value_academic"
                    android:fontFamily="@font/montserratmedium"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="#404040"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:id="@+id/exam_card"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/bg_menu_item">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_picture_in_picture_24"
                        android:contentDescription="TODO" />

                </LinearLayout>

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/exam_card"
                    android:fontFamily="@font/montserratmedium"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="#404040"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:id="@+id/payment"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/bg_menu_item">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_account_balance_wallet_24" />

                </LinearLayout>

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/payment"
                    android:fontFamily="@font/montserratmedium"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="#404040"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:id="@+id/calendar_academic"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/bg_menu_item">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_event_24" />

                </LinearLayout>

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:text="@string/calendar_academic"
                    android:fontFamily="@font/montserratmedium"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="#404040"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/bg_menu_item">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_error_outline_24" />

                </LinearLayout>

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/about"
                    android:fontFamily="@font/montserratmedium"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="#404040"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_suggestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/suggestion"
                android:fontFamily="@font/montserratmedium"
                android:textColor="#FFF"
                android:background="@drawable/bg_button"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>